--- a/README
+++ b/README
@@ -1,32 +1,24 @@
-This is the handout directory for the CS:APP Cache Lab. 
+This is the handout directory for the CS:APP Cache Lab. (By CMU, for the 15-213: Introduction to Computer Systems course.)
 
 ************************
 Running the autograders:
 ************************
 
-Before running the autograders, compile your code:
+Before running the autograders, compile the code:
     linux> make
 
-Check the correctness of your simulator:
+Check the correctness of the simulator:
     linux> ./test-csim
 
-Check the correctness and performance of your transpose functions:
+Check the correctness and performance of the transpose functions:
     linux> ./test-trans -M 32 -N 32
     linux> ./test-trans -M 64 -N 64
     linux> ./test-trans -M 61 -N 67
 
-Check everything at once (this is the program that your instructor runs):
+Check everything at once (this is the program that you run):
     linux> ./driver.py    
 
-******
-Files:
-******
 
-# You will modifying and handing in these two files
-csim.c       Your cache simulator
-trans.c      Your transpose function
-
-# Tools for evaluating your simulator and transpose function
 Makefile     Builds the simulator and tools
 README       This file
 driver.py*   The driver program, runs test-csim and test-trans
