--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is the handout directory for the CS:APP Cache Lab. (By CMU, for the 15-213: Introduction to Computer Systems course.)
+This is the CS:APP Cache Lab. By CMU, for the 15-213: Introduction to Computer Systems course.
 
 ************************
 Running the autograders:
